# noteexplorer

./: .gitattributes  .travis.yml  Cargo.toml  Changelog.md  LICENSE.txt  README.md  build-choco.ps1  build.sh
Chocolatey/: noteexplorer.nuspec
Chocolatey/tools/: LICENSE.txt  VERIFICATION.txt
src/: ftree.rs  lib.rs  main.rs  mdparse.rs  note.rs
testdata/: .gitattributes  12345678901 File Name Title.md  12345678901 Test Note 1.md  20201010101010.md  20210104073402.md  BOM.md  BackLinks.md  File Name Title.md  Links.md  Markdown1.md  One-liner.md  Todos.md  Win-1252.md  yaml1.md  yaml2.md  yaml3.md
