[package]
name = "noteexplorer"
version = "0.1.0"
description = "Helps explore and catalogue your Zettelkasten-like pile of notes"
authors = ["Christian Davén <christian@daven.se>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cdaven/katalorg"
repository = "https://github.com/cdaven/katalorg.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
clap = "~2.33.0"
ansi_term = "0.12"
rprompt = "1.0"
