[package]
name = "noteexplorer"
version = "0.1.1"
description = "Helps organizing your stack of linked Markdown notes"
authors = ["Christian Davén <christian@daven.se>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cdaven/noteexplorer"
repository = "https://github.com/cdaven/noteexplorer.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
chrono = "0.4"
clap = "~2.33.0"
debug_print = "1"
lazy_static = "1.4"
regex = "1"
rprompt = "1.0"
walkdir = "2"

[profile.release]
lto = true
